# TraceFileSim

./: .cproject  .gitignore  .gitlab-ci.yml  .project  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  VERSION  defines.h  defines.hpp  main.cpp  traceFileSim.cpp
Allocators/: Allocator.cpp  Allocator.hpp  BasicAllocator.cpp  BasicAllocator.hpp  NextFitAllocator.cpp  NextFitAllocator.hpp  RealAllocator.cpp  RealAllocator.hpp  RegionBased.cpp  RegionBased.hpp  RegionBasedAllocator.cpp  RegionBasedAllocator.hpp  SimulatedAllocator.cpp  SimulatedAllocator.hpp  ThreadBasedAllocator.cpp  ThreadBasedAllocator.hpp
Collectors/: BalancedCollector.cpp  BalancedCollector.hpp  Collector.cpp  Collector.hpp  CopyingCollector.cpp  CopyingCollector.hpp  MarkSweepCollector.cpp  MarkSweepCollector.hpp  RecyclerCollector.cpp  RecyclerCollector.hpp  TraversalCollector.cpp  TraversalCollector.hpp
Debug/: makefile  sources.mk  subdir.mk
Debug/Allocators/: subdir.mk
Debug/Collectors/: subdir.mk
Debug/Main/: subdir.mk
Debug/Objects/: subdir.mk
Main/: Array.cpp  Array.hpp  CardTable.cpp  CardTable.hpp  ClassManager.cpp  ClassManager.hpp  MemoryManager.cpp  MemoryManager.hpp  Object.cpp  Object.hpp  ObjectContainer.cpp  ObjectContainer.hpp  Optional.cpp  Optional.hpp  Region.cpp  Region.hpp  Simulator.cpp  Simulator.hpp  ThreadOwnedRegion.cpp  ThreadOwnedRegion.hpp
Objects/: Allocator.cpp  Allocator.h  Allocator.hpp  Collector.cpp  Collector.hpp  CopyingCollector.cpp  CopyingCollector.h  CopyingCollector.hpp  MarkSweepCollector.cpp  MarkSweepCollector.h  MarkSweepCollector.hpp  MemoryManager.cpp  MemoryManager.h  MemoryManager.hpp  Object.cpp  Object.h  Object.hpp  ObjectContainer.cpp  ObjectContainer.h  ObjectContainer.hpp  Simulator.cpp  Simulator.h  Simulator.hpp
Tests/TestScripts/: README  RealInput.txt  SyntheticBaseCasesInput.txt  SyntheticInput.txt  TestInputs.txt  TestMain.sh  ToyInput.txt  TraceFileValidate.awk  test.txt
Tests/TraceFiles/: README  chained.readme  chained.trace  child.trace  cycle.readme  cycle.trace  direct.readme  direct.trace  double.trace  indirect.readme  indirect.trace  largeobjects.trace  merging.trace  regionreuse.trace  tenthousand.trace  thousand.trace
WriteBarriers/: RecyclerWriteBarrier.cpp  RecyclerWriteBarrier.hpp  ReferenceCountingWriteBarrier.cpp  ReferenceCountingWriteBarrier.hpp  WriteBarrier.cpp  WriteBarrier.hpp  ZombieRecyclerWriteBarrier.cpp  ZombieRecyclerWriteBarrier.hpp
Writebarriers/: Recycler.cpp  Recycler.hpp  Writebarrier.cpp  Writebarrier.hpp
arrayletTest/: array.cls  array.td  array.trace_original  array.trace_threeobj  array.trace_write
coverity_model/: TraceFilesm_coverity_model.cpp
